# simple-cell

./: .gitignore  README.md  TAGS  changelog.md  circle.yml  jenkins.sh  package.yaml  simple-cell.cabal  stack.yaml
bench/: Bench.hs  Bench.hs~
src/SimpleStore/: Cell.hs
src/SimpleStore/Cell/: DIG.hs  DIG.hs~  Internal.hs  TH.hs  TH.hs~  Types.hs  Types.hs~
src/SimpleStore/Cell/TH/: StoreMakers.hs  StoreMakers.hs~
test/: TestImport.hs  TestImport.hs~
test/SimpleStore/: CellSpec.hs
