Name:                   simple-cell
Version:                2.2.0.0
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Batch Processing of resumable states
Description:            SimpleCell uses SimpleStore and self generating keys to create batch operations on datatypes
Cabal-Version:          >= 1.10
Build-Type:             Simple                                              
Flag                    rebench 
  Description:          Setup second run for profiling
  Default:              False  
Library        
  Default-Language:     Haskell2010  
  HS-Source-Dirs:       src  
  GHC-Options:          -Wall  
  Exposed-Modules:      SimpleStore.Cell                    
  Other-Modules:        SimpleStore.Cell.Internal
                        SimpleStore.Cell.Types
                        SimpleStore.Cell.DIG  
                        SimpleStore.Cell.TH
                        SimpleStore.Cell.TH.StoreMakers                        
  Build-Depends:        base >= 4 && < 5
                      , simple-store == 2.0.1
                      , text >= 1.1.0.1 && < 1.3
                      , system-filepath >= 0.4.10 && < 0.4.14
                      , system-fileio >= 0.3.12 && < 0.3.17
                      , mtl >= 2.1.3.1 && < 2.2.2
                      , stm >= 2.4.3 && < 2.4.5
                      , basic-prelude >= 0.3.0 && < 0.5.0                      
                      , cereal < 0.5                      
                      , stm-containers >= 0.2.7 
                      , hashable >= 1.2.2.0 && < 1.3.0
                      , list-t >= 0.3.0
                      , containers >= 0.5.0.0
                      , bytestring >= 0.10.0.2
                      , directed-keys >= 0.3.1
                      , async >= 2.0.0 && < 2.1.0
                      , aeson >= 0.7.0 && < 0.10.0.0
                      , aeson-serialize >= 0.0.0
                      , template-haskell 
                      , plow-extras-list >= 0.1.0 && < 0.2.0

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -threaded -Wall  
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , aeson
                      , aeson-serialize
                      , hspec
                      , mtl
                      , async
                      , simple-store
                      , template-haskell
                      , cereal 
                      , lens 
                      , text >= 1.1.0.1
                      , QuickCheck >= 2.7.6
                      , stm-containers 
                      , hashable 
                      , list-t
                      , containers
                      , bytestring
                      , basic-prelude
                      , directed-keys
                      , system-fileio 
                      , stm
                      , system-filepath
                      , plow-extras-list

benchmark             simple-cell-bench 
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       bench
                      , src
                      , test
  if flag(rebench)  {
  Ghc-Options:          -threaded -Wall  -rtsopts -prof -auto-all -caf-all -osuf p_o -hisuf p_hi 
  }

  Ghc-Options:          -threaded -Wall  -rtsopts -fllvm -static

  Main-Is:              Bench.hs
  Build-Depends:        base
                      , aeson
                      , aeson-serialize
                      , criterion
                      , mtl
                      , async
                      , random
                      , simple-store
                      , template-haskell
                      , cereal 
                      , lens
                      , text 
                      , stm-containers 
                      , hashable 
                      , list-t
                      , containers
                      , bytestring
                      , basic-prelude
                      , directed-keys
                      , system-fileio 
                      , stm
                      , system-filepath
                      , plow-extras-list



Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/simple-cell.git
